@@ -99,8 +99,10 @@ libwindow-settings/metacity-window-manager.c
 schemas/apps_gnome_settings_daemon_default_editor.schemas.in
 schemas/apps_gnome_settings_daemon_screensaver.schemas.in
 schemas/desktop_gnome_font_rendering.schemas.in
-vfs-methods/themus/Themus_Component.server.in.in
-vfs-methods/themus/Themus_Properties_View.server.in.in
 vfs-methods/themus/theme-method.c
 vfs-methods/themus/themus-properties-view.c
+vfs-methods/themus/themus-properties-main.c
 vfs-methods/themus/themus.schemas.in
+vfs-methods/themus/theme-method.directory.in
+vfs-methods/themus/Themus_Properties_View.server.in.in
+vfs-methods/themus/Themus_Component.server.in.in
