@@ -1,3 +1,7 @@
+2003-05-13  Andrew Sobala  <aes@gnome.org>
+
+	* POTFILES.in: added themus files
+
 2003-05-13  Christian Rose  <menthos@menthos.com>
 
 	* POTFILES.in: Added missing files.
